typescript/hello-cdk8s-plus-ingress/dist/hello-cdk8s-plus-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-cdk8s-plus-ingress-ingress-c8662a2f
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: hello-cdk8s-plus-ingress-root-service-c83a4af3
                port:
                  number: 5678
            path: /
            pathType: Prefix
          - backend:
              service:
                name: hello-cdk8s-plus-ingress-foo-service-c8e432fb
                port:
                  number: 5678
            path: /foo
            pathType: Prefix
          - backend:
              service:
                name: hello-cdk8s-plus-ingress-foo-bar-service-c844cebf
                port:
                  number: 5678
            path: /foo/bar
            pathType: Prefix
    - host: my.host
      http:
        paths:
          - backend:
              service:
                name: hello-cdk8s-plus-ingress-my.host-hey-service-c834857c
                port:
                  number: 5678
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cdk8s-plus-ingress-root-c8b2cd6a
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-root-c8d018ba
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-root-c8d018ba
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - -text
            - root
          image: hashicorp/http-echo
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 5678
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 5678
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
---
apiVersion: v1
kind: Service
metadata:
  name: hello-cdk8s-plus-ingress-root-service-c83a4af3
spec:
  externalIPs: []
  ports:
    - port: 5678
  selector:
    cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-root-c8d018ba
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cdk8s-plus-ingress-foo-c82d34bb
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-foo-c8e3404d
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-foo-c8e3404d
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - -text
            - foo
          image: hashicorp/http-echo
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 5678
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 5678
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
---
apiVersion: v1
kind: Service
metadata:
  name: hello-cdk8s-plus-ingress-foo-service-c8e432fb
spec:
  externalIPs: []
  ports:
    - port: 5678
  selector:
    cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-foo-c8e3404d
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cdk8s-plus-ingress-foo-bar-c81a0efe
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-foo-bar-c827c920
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-foo-bar-c827c920
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - -text
            - foo-bar
          image: hashicorp/http-echo
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 5678
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 5678
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
---
apiVersion: v1
kind: Service
metadata:
  name: hello-cdk8s-plus-ingress-foo-bar-service-c844cebf
spec:
  externalIPs: []
  ports:
    - port: 5678
  selector:
    cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-foo-bar-c827c920
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cdk8s-plus-ingress-my.host-hey-c851e454
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-my.host-hey-c872a200
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-my.host-hey-c872a200
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - -text
            - my.host/hey
          image: hashicorp/http-echo
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 5678
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 5678
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
---
apiVersion: v1
kind: Service
metadata:
  name: hello-cdk8s-plus-ingress-my.host-hey-service-c834857c
spec:
  externalIPs: []
  ports:
    - port: 5678
  selector:
    cdk8s.io/metadata.addr: hello-cdk8s-plus-ingress-my.host-hey-c872a200
  type: ClusterIP
